--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.32.0
-prettymapp==0.4.0
-geopandas==0.14.3
-shapely==2.0.3
-folium==0.19.6
-streamlit-folium==0.15.1
-branca==0.7.0
-numpy==1.26.4
-pandas==2.2.3
-matplotlib==3.8.3 
+streamlit
+prettymapp
+geopandas
+shapely
+folium
+streamlit-folium
+branca
+numpy
+pandas
+matplotlib
