--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.32.0
-prettymapp==0.4.0
-geopandas==0.14.3
-shapely==2.0.3
-folium==0.15.1
-streamlit-folium==0.15.1
+streamlit
+prettymapp
+geopandas
+shapely
+folium
+streamlit-folium
 branca
 numpy
 pandas==2.2.3
